# d0tTino

./: .env.example  .eslintrc.json  .gitignore  .ruff.toml  LICENSE  README.md  bootstrap.ps1  docker-compose.yml  eslint.config.js  install.sh  json_schema_bench.py  mypy.ini  package-lock.json  package.json  plugin-registry.json  plugin-registry.schema.json  pyproject.toml  requirements-dev.txt  requirements.txt  starship.toml  telemetry.py  winget-packages.json
.githooks/: pre-commit
api/: __init__.py
dashboard/: package.json
docs/: ai-automation.md  audit_prompt.md  awesome-sources.md  dashboard.md  desktop.md  installation.md  media.md  navigation.md  plugins.md  telemetry.md  terminal.md  thm.md  ume.md
examples/: rag_example.txt
llm/: __init__.py  ai_router.py  etl.py  langchain_backend.py  llm_config.json  router.py  universal_dspy_wrapper_v2.py  utils.py
metadata/: sources.json  sources.schema.json
oh-my-posh/: theme.omp.json
palettes/: blacklight.toml  dracula.toml  solarized-dark.toml
plugins/: __init__.py  discovery.py  utils.py
powershell/: profile.ps1  user_profile.ps1
powertoys/: config.json
research-papers/: README.md  evolving-anti-bot-fingerprints.md
scripts/: ai_cli.py  ai_do.py  ai_exec.py  ai_router.py  check-hooks.sh  cli_common.py  create-hyperv-vm.ps1  enrich_sources.py  etl.py  export-winget.ps1  fix-path.ps1  generate_sources_md.py  install-llm-tools.ps1  install-windows-terminal.ps1  install-wsl.ps1  install.ps1  install.sh  install_common.sh  n8n_generate.py  nsm_stats.py  nsm_upload.py  plugins.py  provision-vm.ps1  provision_vm.py  query_sources.py  rag_example.py  rag_sweep.py  render-gource.sh  run-mattermost.sh  run-neko.sh  run-nextcloud.sh  run-romm.sh  run-service.sh  setup-docker.ps1  setup-docker.sh  setup-ghostty.sh  setup-hooks.ps1  setup-hooks.sh  setup-screenshot-env.ps1  setup-screenshot-env.sh  (+9 more)
src-tauri/: Cargo.toml  tauri.conf.json
tests/: README  conftest.py  stubs.py  test_ai_cli.py  test_ai_cli_plugins.py  test_ai_do.py  test_ai_exec.py  test_ai_router.py  test_api_routes.py  test_apply_palette.py  test_backends_initialize.py  test_basic.py  test_bootstrap_install_ps1.py  test_bootstrap_ps1.py  test_check_hooks.py  test_cli_common.py  test_config.py  test_create_hyperv_vm.py  test_dotfiles.py  test_dspy_backend_imports.py  test_dspy_backends.py  test_etl.py  test_fix_path.py  test_generate_settings.py  test_generate_sources_md.py  test_install_common.py  test_install_fonts.py  test_install_llm_tools_ps1.py  test_install_scripts.py  (+45 more)
(+82 files in other folders)
