[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm"
version = "0.1.0"
description = "Local LLM utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["dspy==2.6.27"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "json5",
]
cli = ["tomli_w"]

[project.scripts]
thm = "scripts.thm:main"
ai = "scripts.ai_router:main"
ai-plan = "scripts.ai_exec:main"
ai-do = "scripts.ai_do:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["llm*", "scripts*"]

[tool.ruff]
src = ["llm", "scripts"]
