[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm"
version = "0.1.0"
description = "Local LLM utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["dspy==2.6.27"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-asyncio",
    "json5",
    "mypy",
]
cli = ["tomli_w"]
lmql = ["lmql"]
guidance = ["guidance"]

[project.scripts]
thm = "scripts.thm:main"
ai = "scripts.ai_cli:send_main"
ai-plan = "scripts.ai_cli:plan_main"
ai-do = "scripts.ai_cli:do_main"
ai-cli = "scripts.ai_cli:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["llm*", "scripts*"]

[tool.ruff]
src = ["llm", "scripts"]
