[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm"
version = "0.1.0"
description = "Local LLM utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["dspy==2.6.27", "requests"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-asyncio",
    "json5",
    "mypy",
    "fastapi",
    "uvicorn",
    "httpx",
]
cli = ["tomli_w"]
lmql = ["lmql"]
guidance = ["guidance"]
etl = ["unstructured", "chromadb"]
plugins = ["jsonschema"]

[project.scripts]
thm = "scripts.thm:main"
ai = "scripts.ai_cli:send_main"
ai-plan = "scripts.ai_cli:plan_main"
ai-do = "scripts.ai_cli:do_main"
ai-cli = "scripts.ai_cli:main"
etl = "scripts.etl:main"
plugins = "scripts.plugins:main"

[project.entry-points."llm.plugins"]
# Third-party packages can expose backends here

[project.entry-points."d0ttino.recipes"]
sample = "scripts.recipes.plugins.sample:run"


[tool.setuptools.packages.find]
where = ["."]
include = ["llm*", "scripts*"]

[tool.ruff]
src = ["llm", "scripts"]
